--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ python:
 install:
   - pip install -r requirements.txt
 # command to run tests
-#script:
-#  - pytest
+script:
+  - python setup.py test
 after_success:
 - bash < (curl -s https://codecov.io/bash)g
