--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,4 @@ install:
 script:
   - python setup.py test
 after_success:
-- bash < (curl -s https://codecov.io/bash)g
+- bash <(curl -s https://codecov.io/bash)
