Configure code coverage

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,3 +4,13 @@ test=pytest
 [tool:pytest]
 addopts = --verbose
 python_files = tests/*.py
+
+[coverage:run]
+branch = True
+source = src/
+
+[coverage:report]
+exclude_lines =
+    logger.info
+omit =
+    tests/*
