--- a/setup.cfg
+++ b/setup.cfg
@@ -14,6 +14,16 @@ exclude_lines =
     logger.info
 omit =
     tests/*
+    versioneer.py
+    src/gardena/_version.py
 
 [pep8]
 max-line-length = 88
+
+[versioneer]
+VCS = git
+style = pep440
+versionfile_source = src/gardena/_version.py
+versionfile_build = gardena/_version.py
+tag_prefix = ''
+parentdir_prefix = py-smart-gardena-
