Configure python build versions

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,8 @@ language: python
 python:
 - '3.4'
 - '3.5'
-- 3.5-dev
 - '3.6'
-- 3.6-dev
-- '3.7'
-- 3.7-dev
+- '3.7-dev'
 install:
 - pip install -r requirements.txt
 - pip install codecov versioneer
@@ -32,5 +29,5 @@ deploy:
   on:
     tags: true
     branch: master
-    python: '3.7'
+    python: '3.7-dev'
   distributions: "register sdist upload"
