--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ python:
 - '3.7-dev'
 install:
 - pip install -r requirements.txt
-- pip install codecov versioneer wheel cmarkgfm
+- pip install codecov wheel cmarkgfm
 before_script:
 - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64
   > ./cc-test-reporter
