--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ python:
 install:
 - pip install -r requirements.txt
 - pip install codecov wheel cmarkgfm
+- pip install --upgrade pytest
 before_script:
 - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64
   > ./cc-test-reporter
