--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ install:
 - pip install -r requirements.txt
 - pip install codecov wheel cmarkgfm
 - pip install --upgrade pytest
+- pip install codacy-coverage
 before_script:
 - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64
   > ./cc-test-reporter
@@ -19,7 +20,7 @@ script:
 - python setup.py test
 after_script:
 - "./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT"
-after_success:
+- python-codacy-coverage -r coverage.xml
 - codecov
 deploy:
   provider: pypi
