--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 test=pytest
 
 [tool:pytest]
-addopts = --verbose --cov=gardena
+addopts = --verbose --cov=gardena --cov-report html:reports/coverage-html --cov-report xml:reports/coverage.xml
 python_files = tests/*.py
 
 [coverage:run]
@@ -15,8 +15,6 @@ exclude_lines =
 omit =
     tests/*
     src/gardena/_version.py
-
-[coverage:xml]
 
 [pep8]
 max-line-length = 88
