--- a/.travis.yml
+++ b/.travis.yml
@@ -22,4 +22,4 @@ deploy:
     tags: true
     branch: master
     python: '3.7'
-  distributions: register sdist bdist_wheel
+  distributions: register sdist upload
