--- a/setup.cfg
+++ b/setup.cfg
@@ -18,3 +18,9 @@ omit =
 
 [pep8]
 max-line-length = 88
+
+[versioneer]
+VCS = git
+style = pep440
+versionfile_source = src/gardena/_version.py
+versionfile_build = gardena/_version.py
