--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ oauthlib = "==3.1.0"
 requests-oauthlib = "==1.3.0"
 requests = "==2.25.1"
 websocket-client = "==1.1.0"
+black = "*"
 
 [dev-packages]
 
