--- a/Pipfile
+++ b/Pipfile
@@ -7,8 +7,8 @@ name = "pypi"
 oauthlib = "==3.1.0"
 requests-oauthlib = "==1.3.0"
 requests = "==2.25.1"
-websocket-client = "==1.1.0"
 black = "*"
+pip-tools = "*"
 
 [dev-packages]
 
