--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,7 @@ name = "pypi"
 oauthlib = "==3.1.0"
 requests-oauthlib = "==1.3.0"
 requests = "==2.25.1"
+websockets = "*"
 
 [dev-packages]
 black = "*"
