--- a/Pipfile
+++ b/Pipfile
@@ -4,9 +4,9 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-oauthlib = "==3.1.0"
-requests-oauthlib = "==1.3.0"
-requests = "==2.25.1"
+oauthlib = "*"
+requests-oauthlib = "*"
+requests = "*"
 websockets = "*"
 
 [dev-packages]
