--- a/requirements.txt
+++ b/requirements.txt
@@ -7,10 +7,10 @@
 
 -i https://pypi.org/simple
 certifi==2022.5.18.1; python_version >= '3.6'
-chardet==4.0.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
-idna==2.10; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-oauthlib==3.1.0
-requests-oauthlib==1.3.0
-requests==2.25.1
+charset-normalizer==2.0.12; python_version >= '3'
+idna==3.3; python_version >= '3'
+oauthlib==3.2.0
+requests-oauthlib==1.3.1
+requests==2.27.1
 urllib3==1.26.9; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
 websockets==10.3
