--- a/requirements.txt
+++ b/requirements.txt
@@ -6,11 +6,19 @@
 #
 
 -i https://pypi.org/simple
+anyio==3.6.1; python_full_version >= '3.6.2'
+authlib==1.0.1
 certifi==2022.5.18.1; python_version >= '3.6'
+cffi==1.15.0
 charset-normalizer==2.0.12; python_version >= '3'
+cryptography==37.0.2; python_version >= '3.6'
+h11==0.12.0; python_version >= '3.6'
+httpcore==0.15.0; python_version >= '3.7'
+httpx==0.23.0
 idna==3.3; python_version >= '3'
-oauthlib==3.2.0
-requests-oauthlib==1.3.1
+pycparser==2.21
 requests==2.27.1
+rfc3986[idna2008]==1.5.0
+sniffio==1.2.0; python_version >= '3.5'
 urllib3==1.26.9; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
 websockets==10.3
