--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@
 -i https://pypi.org/simple
 anyio==3.6.1; python_full_version >= '3.6.2'
 authlib==1.0.1
+backoff==2.1.2
 certifi==2022.6.15; python_full_version >= '3.6.0'
 cffi==1.15.1
 charset-normalizer==2.1.0; python_full_version >= '3.6.0'
@@ -20,5 +21,5 @@ pycparser==2.21
 requests==2.28.1
 rfc3986[idna2008]==1.5.0
 sniffio==1.2.0; python_version >= '3.5'
-urllib3==1.26.10; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5' and python_version < '4'
+urllib3==1.26.10; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5' and python_version < '4.0'
 websockets==10.3
