--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
 -i https://pypi.org/simple
-anyio==4.2.0; python_version >= '3.8'
-authlib==1.3.0; python_version >= '3.8'
-backoff==2.2.1; python_version >= '3.7' and python_version < '4.0'
+anyio==4.3.0; python_version >= '3.8'
+authlib==1.3.0
+backoff==2.2.1
 certifi==2024.2.2; python_version >= '3.6'
 cffi==1.16.0; platform_python_implementation != 'PyPy'
 charset-normalizer==3.3.2; python_full_version >= '3.7.0'
-cryptography==42.0.2; python_version >= '3.7'
+cryptography==42.0.5; python_version >= '3.7'
 h11==0.14.0; python_version >= '3.7'
-httpcore==1.0.2; python_version >= '3.8'
-httpx==0.26.0; python_version >= '3.8'
+httpcore==1.0.4; python_version >= '3.8'
+httpx==0.27.0
 idna==3.6; python_version >= '3.5'
-oauthlib==3.2.2; python_version >= '3.6'
+oauthlib==3.2.2
 pycparser==2.21
-requests==2.31.0; python_version >= '3.7'
-sniffio==1.3.0; python_version >= '3.7'
-urllib3==2.2.0; python_version >= '3.8'
-websockets==12.0; python_version >= '3.8'
+requests==2.31.0
+sniffio==1.3.1; python_version >= '3.7'
+urllib3==2.2.1; python_version >= '3.8'
+websockets==12.0
