--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,19 @@
 -i https://pypi.org/simple
-anyio==4.3.0; python_version >= '3.8'
-authlib==1.3.0
+anyio==4.7.0 ; python_version >= '3.9'
+authlib==1.4.0
 backoff==2.2.1
-certifi==2024.2.2; python_version >= '3.6'
-cffi==1.16.0; platform_python_implementation != 'PyPy'
-charset-normalizer==3.3.2; python_full_version >= '3.7.0'
-cryptography==42.0.5; python_version >= '3.7'
-h11==0.14.0; python_version >= '3.7'
-httpcore==1.0.4; python_version >= '3.8'
-httpx==0.27.0
-idna==3.6; python_version >= '3.5'
+certifi==2024.12.14 ; python_version >= '3.6'
+cffi==1.17.1 ; platform_python_implementation != 'PyPy'
+charset-normalizer==3.4.1 ; python_version >= '3.7'
+cryptography==44.0.0 ; python_version >= '3.7' and python_full_version not in '3.9.0, 3.9.1'
+h11==0.14.0 ; python_version >= '3.7'
+httpcore==1.0.7 ; python_version >= '3.8'
+httpx==0.28.1
+idna==3.10 ; python_version >= '3.6'
 oauthlib==3.2.2
-pycparser==2.21
-requests==2.31.0
-sniffio==1.3.1; python_version >= '3.7'
-urllib3==2.2.1; python_version >= '3.8'
-websockets==12.0
+pycparser==2.22 ; python_version >= '3.8'
+requests==2.32.3
+sniffio==1.3.1 ; python_version >= '3.7'
+typing-extensions==4.12.2 ; python_version < '3.13'
+urllib3==2.3.0 ; python_version >= '3.9'
+websockets==14.1
