--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,10 @@ backoff = "*"
 [dev-packages]
 black = "*"
 pip-tools = "*"
+pytest = "*"
+coverage = "*"
+pytest-cov = "*"
+requests-mock = "*"
 
 [requires]
 python_version = "3.12"
