--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,10 @@
 [aliases]
 test=pytest
 
-[tool:pytest]
+[pytest]
 addopts = --verbose --cov=gardena --cov-report html:reports/coverage-html --cov-report xml:reports/coverage.xml
 python_files = tests/*.py
+pythonpath = src
 
 [coverage:run]
 branch = True
