update source path for pytest (2)

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [aliases]
 test=pytest
 
-[pytest]
+[tool:pytest]
 addopts = --verbose --cov=gardena --cov-report html:reports/coverage-html --cov-report xml:reports/coverage.xml
 python_files = tests/*.py
 pythonpath = src
