--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -35,7 +35,7 @@ jobs:
         if [ -f test-requirements.txt ]; then pip install -r test-requirements.txt; fi
     - name: Test with pytest
       run: |
-        python setup.py test
+        pytest
     - name: Build the dist files
       run: python setup.py sdist bdist_wheel
     - name: Publish package
